[project]
name = "user-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "김건희",email = "heyggun@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]

[tool.poetry]
packages = [{include = "user_prediction", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
